cabal-version: 2.2
name:          hc-vault-client
version:       0.1.0
license:       Apache-2.0
synopsis:      Client for HashiCorp Vault
description:   Client for HashiCorp Vault
author:        Leonid Onokhov
maintainer:    sopvop@gmail.com
stability:     Experimental
category:      Web
build-type:    Simple

common deps
  build-depends: base                   ^>= 4.14 && < 5
               , aeson                  ^>= 1.5.6.0
               , text                   ^>= 1.2.4.1
               , time                   ^>= 1.9.3
               , transformers           ^>= 0.5.5.2
               , unliftio               ^>= 0.2.10
               , http-client            ^>= 0.6.4.1
               , http-client-tls        ^>= 0.3.5.3
               , http-types             ^>= 0.12.3
               , containers             ^>= 0.6

  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       DuplicateRecordFields
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       MultiWayIf
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       NamedFieldPuns

  ghc-options: -funbox-strict-fields
               -Wall
               -Wextra
               -fno-warn-name-shadowing
               -Wcompat
               -Widentities
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options: -Wredundant-constraints
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists
                 -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
                 -Werror=missing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages

library
  import: deps
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    HcVault.Client
    HcVault.Client.Auth.AppRole
    HcVault.Client.Core
    HcVault.Client.Secrets.KV
    HcVault.Client.Secrets.PKI
    HcVault.Client.Sys.Auth
    HcVault.Client.Sys.Secrets
    HcVault.Client.Sys.Wrapping
  build-depends: bytestring ^>= 0.10.12.0,
                 template-haskell >= 2.16.0.0,
                 uuid-types ^>= 1.0.5

test-suite test
  import: deps
  hs-source-dirs: tests
  main-is: Tests.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts
  build-depends: hc-vault-client